- Fixed: Amounts with conversions are consistent over all pages now (#612, #626)
- Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
- Fixed: On product creation with prefilled name there was a plus instead of space character
- Fixed: On product details sheet, description card was rendered with wrong height sometimes (#717)
- Fixed: Editing of recipe ingredient with broken quantity unit is possible now
- Fixed: Recipe ingredient price factor is not saved wrong anymore when creating ingredient (#615)
- Fixed: Product description popup animation doesn't have glitches anymore
- Fixed: App was sometimes offline when opened from background (#722)
- Fixed: With server version below 3.3.0, stock quantity unit could not be set in new product (#678)
- Fixed: Total product count on overview page in stock section also included products with
  option "Never show on stock overview" enabled (#644)

## 3.2.1

- Fixed: Random crash with no reason (#699)
- Fixed: Prevent another crash after reopening app from background (#697)
- Fixed: Product pictures not loading (with Home Assistant or not, we don't know) (#700)
- Fixed: Overview and stock page not populated after theme change or other cases (#692, #695)
- Fixed: Crash on stock page with opened product overview sheet in some cases (#673)

## 3.2.0

- New: Catalan, Estonian and Portuguese (Brazil) translations. Many thanks for your contributions!
- New: Product pictures on stock & master products list if at least one picture is available (#536)
- New: Grid layout for recipes list