@@ -55,6 +55,7 @@ All other changes:
 - Fixed: Crash on startup with Android Lollipop (and maybe higher)
 - Fixed: Prevent crash when opening qu conversion page (#708)
 - Fixed: Glitch with large top margin on recipe grid layout (#696)
+- Fixed: Flickering of bottom messages when bottom bar was scrolled down (#719)
 - Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
 - Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
 - Fixed: On product creation with prefilled name there was a plus instead of space character
